# isyre_6644_mp2

./: .gitignore  Project_Prompt.md  README.md  pyproject.toml  sim6644 flu model 1.doe  src.bak
data/: Flu_Pandemic_10000_weekend_False.csv.bak  Flu_Pandemic_10000_weekend_True.csv  Flu_Pandemic_1000_weekend_False.csv  Flu_Pandemic_1000_weekend_True.csv  Flu_Pandemic_16_weekend_True.csv
src/: charts.py  mp2.py  multi.py
src/patient/: patient.py
