[tool.poetry]
name = "isye_6644_mp2"
version = "1.0.0"
description = "ISYE 6644 MP2"
authors = ["Robert King <robert.f1.king@gatech.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
argparse = "^1.4.0"
pandas = "^1.2.5"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
scipy = "^1.7.0"
statistics = "^1.0.3"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
